<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia" />

        <Spinner
            android:id="@+id/spinnerDia"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hora" />

        <Spinner
            android:id="@+id/spinnerHora"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/duracion" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menos" />

            <TextView
                android:id="@+id/textoDuracion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/botonMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas" />
        </LinearLayout>

        <Button
            android:id="@+id/botonConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/confirmar_reserva" />

    </LinearLayout>

</LinearLayout>
