<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textoClub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadlineSmall" />

            <TextView
                android:id="@+id/textoDeporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/textoDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textoPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <Button
                android:id="@+id/botonLlamar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/llamar_al_club" />

            <Button
                android:id="@+id/botonMapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/como_llegar" />

            <Button
                android:id="@+id/botonReservar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservar_turno" />

            <TextView
                android:id="@+id/textoUltimaReserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:freezesText="true" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
